--- a/30_Capture/node_capture/Docker/Dockerfile
+++ b/30_Capture/node_capture/Docker/Dockerfile
@@ -7,7 +7,7 @@ ENV LANG fr_FR.UTF-8
 RUN apt-get update && apt-get install -y \
     && rm -rf /var/likb/apt/lists/*
 
-COPY ../ROS/. /root/catkin_ws/src/
+COPY ../ROS/. /root/
 WORKDIR /root/catkin_ws
 RUN /bin/bash -c '. /opt/ros/melodic/setup.bash; catkin_make'
 RUN /bin/bash -c '. /opt/ros/melodic/setup.bash; source devel/setup.bash'
