--- a/30_Capture/node_capture/Dockerfile
+++ b/30_Capture/node_capture/Dockerfile
@@ -7,15 +7,12 @@ ENV LANG fr_FR.UTF-8
 RUN apt-get install -y net-tools iputils-ping\
     && rm -rf /var/likb/apt/lists/*
 
-RUN mkdir -p /root/catkin_ws/src
-WORKDIR /root/catkin_ws/src
-ADD catkin_ws/src/ /root/catkin_ws/src
-RUN ls -la
-
 WORKDIR /root
-ADD run_on_start.sh /root/
-RUN sh run_on_start.sh
+ADD ./ /root
 
 WORKDIR /root/catkin_ws
 RUN /bin/bash -c '. /opt/ros/melodic/setup.bash; catkin_make'
 RUN /bin/bash -c '. /opt/ros/melodic/setup.bash; source devel/setup.bash'
+
+ENV NODE_NAME node_p
+RUN /bin/bash -c '. source catkin_deploy.sh' 
