--- a/10_Computer/node_p/Dockerfile
+++ b/10_Computer/node_p/Dockerfile
@@ -9,10 +9,10 @@ RUN apt-get install -y net-tools iputils-ping\
 
 WORKDIR /root
 ADD ./ /root
+RUN ls -la
 
 WORKDIR /root/catkin_ws
 RUN /bin/bash -c '. /opt/ros/melodic/setup.bash; catkin_make'
 RUN /bin/bash -c '. /opt/ros/melodic/setup.bash; source devel/setup.bash'
 
-ENV NODE_NAME node_p
-RUN /bin/bash -c '. source catkin_deploy.sh' 
+RUN /bin/bash -c '. source c6_deploy.sh' 
