--- a/30_Capture/node_capture/Dockerfile
+++ b/30_Capture/node_capture/Dockerfile
@@ -9,9 +9,10 @@ RUN apt-get install -y net-tools iputils-ping\
 
 WORKDIR /root
 ADD ./ /root
+RUN ls -la
 
 WORKDIR /root/catkin_ws
 RUN /bin/bash -c '. /opt/ros/melodic/setup.bash; catkin_make'
 RUN /bin/bash -c '. /opt/ros/melodic/setup.bash; source devel/setup.bash'
 
-RUN /bin/bash -c '. source catkin_deploy.sh' 
+RUN /bin/bash -c '. c6_deploy.sh' 
