--- a/10_Computer/node_master/config
+++ b/10_Computer/node_master/config
@@ -5,3 +5,5 @@ ROS_MASTER_URI="http://172.18.0.2:11311/"
 SWARM_MANAGER_IP=""
 SWARM_WORKER_IP=""
 ROSRUN_EXE="roscore"
+CONSOLE_HL="~~~~~~~~~~~~~~~~~~~~~"
+GLOBAL_PATH="../../00_Global"
