--- a/20_Robot/node_robot/config
+++ b/20_Robot/node_robot/config
@@ -1,7 +1,5 @@
 NODE_NAME="node_robot"
 NODE_VERSION="0.1"
 NODE_IP=""
-ROS_MASTER_URI="http://172.18.0.2:11311/"
-SWARM_MANAGER_IP=""
 SWARM_WORKER_IP=""
-ROSRUN_EXE="node_robot.py"
+ROSRUN_EXE="rosrun node_robot node_robot.py"
