--- a/build
+++ b/build
@@ -1,42 +1,3 @@
-#!/bin/bash
+#!/usr/bin/env bash
 
-##############################################################################
-#Autor: Adrien Beaudrey
-#Version: 0.1
-#Date: 2019.08.03
-#Title: Build
-#Purpose: Run subdirectories deployment scripts, for each node existing for the "role" (ARA: Apiary Robotic Assistant)
-#Site: https://apiarobotics.com
-#
-#
-##############################################################################
-
-#for each node, run install process
-#for i in `find . -type d -name '[1-9]*'` ;do
-
-# go to "role" folder:
-cd $ROLE/
-#echo $(pwd)
-
-# for each folder (node) inside role root folder: 
-for i in [1-9]*; do
-	echo "Node $i"
-	echo ""
-	# test folder is patern validated:
-	#if [[ "$i" =~ [â-zA-Zà-9\ ] ]]; then
-		# yes folder name follows patern
-    		DEFAULT="N"
-    		read -e -p "Proceed $i installation ? [N/y/q]:" PROCEED
-    		PROCEED="${PROCEED:-${DEFAULT}}"
-    		if [ "${PROCEED}" == "y" ] ; then
-        		echo ">>>> Node $i: Installing"
-			cd $i/
-			echo $(pwd)
-			source ./Local
-			/bin/bash $GLOBAL_PATH/0g_install.sh
-        		echo "#### Node $i: Installation done"
-    		else
-        		echo "#### Installation $i aborded !"
-    		fi
-	#fi
-done
+/bin/bash 00_Global/0g_install.sh
