--- a/10master/11roscore/global.conf
+++ b/10master/11roscore/global.conf
@@ -6,6 +6,7 @@ ROS_MASTER_URI="http://10master:11311/"
 ROSPKG_PRE="node"
 DOCKERFILE="Dockerfile-ROS"
 NET_NAME="ara_ntw"
+NET_FILE_NAME="network.conf"
 SWARM="y"
 SWARM_MASTER="10master"
 MASTER_ROLE="10master"
