--- a/00global/global.conf
+++ b/00global/global.conf
@@ -1,11 +1,12 @@
 APP_NAME="ARAv1"
 APP_VERSION="0.1"
 REPO_NAME="arav1"
-APP_SUBNET="192.168.0.80/24"
+APP_SUBNET="192.168.1.0/24"
 ROS_MASTER_URI="http://10master:11311/"
 ROSPKG_PRE="node"
 DOCKERFILE="Dockerfile-ROS"
 NET_NAME="ara_ntw"
+NET_FILE_NAME="network.conf"
 SWARM="y"
 SWARM_MASTER="10master"
 MASTER_ROLE="10master"
