--- a/10master/12database/Dockerfile-ROS
+++ b/10master/12database/Dockerfile-ROS
@@ -1,1 +1,11 @@
-/home/ubuntu/ARAv1/00global/Dockerfile-ROS
+FROM ros:melodic-ros-base
+
+RUN apt-get update && apt-get install locales
+RUN locale-gen fr_FR.UTF-8
+ENV LANG fr_FR.UTF-8
+
+RUN apt-get install -y net-tools iputils-ping\
+    && rm -rf /var/likb/apt/lists/*
+
+WORKDIR /root
+ADD ./ ./
