--- a/10master/11roscore/global.conf
+++ b/10master/11roscore/global.conf
@@ -1,7 +1,8 @@
 APP_NAME="ARAv1"
 APP_VERSION="0.1"
 REPO_NAME="arav1"
-APP_SUBNET="192.168.0.80/24"
+APP_SUBNET="192.168.1.0/24"
+ROS_MASTER="11roscore"
 ROS_MASTER_URI="http://10master:11311/"
 ROSPKG_PRE="node"
 DOCKERFILE="Dockerfile-ROS"
@@ -18,4 +19,5 @@ DEP_NET="n"
 DEP_VNET="n"
 DEP_ROLE="n"
 DEP_NODE="y"
+DEP_CONT="y"
 DEP_QUIT="q"
