--- a/10master/12database/Dockerfile-MongoDB
+++ b/10master/12database/Dockerfile-MongoDB
@@ -1,11 +1,1 @@
-FROM mongo:4.1 
-
-RUN apt-get update && apt-get install locales
-RUN locale-gen fr_FR.UTF-8
-ENV LANG fr_FR.UTF-8
-
-RUN apt-get install -y net-tools iputils-ping\
-    && rm -rf /var/likb/apt/lists/*
-
-WORKDIR /root
-ADD ./ ./
+/home/ubuntu/ARAv1/00global/Dockerfile-MongoDB
